Fix masonry grid collapse when container-type is used: add width 100%

--- a/components/02-layouts/component-layouts/masonry-layout/_masonry-layout.scss
+++ b/components/02-layouts/component-layouts/masonry-layout/_masonry-layout.scss
@@ -1,5 +1,6 @@
 .masonry-grid {
   display: grid;
+  width: 100%;
   grid-gap: $spacer-md;
 
   .case-list-teaser__body {
